changing font size and adding snow

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,7 @@
 
+<!-- SNOW -->
+<%= render "shared/snow" %>
+<!-- ABOUT CARD -->
 <div class="card">
 <h1 class="heading about-heading">
     About this Project and the Creators
@@ -25,7 +28,7 @@
         </span>
         </p>
     </div>
-    <span class="scroll-btn hide" id="hidden">
+    <span class="scroll-btn">
 		<span class="mouse">
 			<span>
 			</span>
