--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,3 @@
+<!-- SNOW -->
+<%= render "shared/snow" %>
 <div class="click-me-div"><%= link_to  "Click Me", "/christmas_story_venardou", class: "click-me" %></div>
