--- a/app/assets/stylesheets/components/_scroll.scss
+++ b/app/assets/stylesheets/components/_scroll.scss
@@ -7,13 +7,17 @@
         color: #f4f4f4;
         font-weight: 100;
         width: 100%;
+        font-size: 1.5rem;
 
+        @media screen and (max-width:380px) {
+            font-size: 1.2rem;
+        }
     }
 
     @media screen and (max-width:380px) {
-        height: 60%;
+        height: 70%;
         width: 100%;
-    }
+        }
 
     @media screen and (min-width:800px) {
         height: 70%;
