--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,4 +23,5 @@
  @import 'components/scroll';
  @import 'components/about';
  @import 'components/title';
- @import 'components/mouse'
+ @import 'components/mouse';
+ @import 'components/fb'
