--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <!-- SNOW -->
 <%= render "shared/snow" %>
 <div class="click-me-div"><%= link_to  "Click Me", "/christmas_story_venardou", class: "click-me" %></div>
+<img src="app/assets/images/cover.png" alt="Christmas Gift 2020" class="fb">
