changing img src

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <!-- SNOW -->
 <%= render "shared/snow" %>
 <div class="click-me-div"><%= link_to  "Click Me", "/christmas_story_venardou", class: "click-me" %></div>
-<img src="../assets/images/cover.png" alt="Christmas Gift 2020" class="fb">
+<img src="./assets/images/cover.png" alt="Christmas Gift 2020" class="fb">
