changing img src

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="http://christmas-gift-2020.heroku.app.com/app/assets/images/cover.png" />
+    <meta property="og:image" content="http://christmas-gift-2020.heroku.app.com/assets/images/cover.png" />
     <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet." />
     <meta property="og:site_name" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <meta property="og:image:width" content="1200" />
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Gift 2020">
     <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
-    <meta name="twitter:image:src" content="http://christmas-gift-2020.heroku.app.com/app/assets/images/cover.png">
+    <meta name="twitter:image:src" content="http://christmas-gift-2020.heroku.app.com/assets/images/cover.png">
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
