read me changed and meta image next try

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:image" content="<%= asset_path 'cover.png' %>" />
     <meta property="og:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet." />
     <meta property="og:site_name" content="Christmas Gift 2020 - A Christmas Escape in Fantasy" />
     <!--TWITTER META TAGS -->
