--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <!--TWITTER META TAGS -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Christmas Gift 2020">
+    <meta name="twitter:image" content="<%= asset_path 'cover.png' %>">
     <meta name="twitter:description" content="A Christmas gift for the world in the dark COVID times of 2020. This is a non-profit project of two European friends seperated by many borders, connected through the internet.">
 
     <%= csrf_meta_tags %>
